# satellite-coverage-tracker

./: CMakeLists.txt  README.md
data/: ssr_20241203_1535277411.csv
lib/libsgp4/: CoordGeodetic.h  SGP4.cc  Tle.cc
lib/passpredict/: CMakeLists.txt
lib/runtest/: CMakeLists.txt
lib/sattrack/: CMakeLists.txt
src/: DataModel.cpp  DataModel.h  GraphModel.cpp  GraphModel.h  LinearModel.cpp  LinearModel.h  SatelliteCatalog.cpp  SatelliteCatalog.h  SatelliteCoverageTracker.cpp  SatelliteCoverageTracker.h  TLEParser.cpp  TLEParser.h  Utility.cpp  Utility.h  main.cpp
tests/: DataModel-tests.cpp  Graph-tests.cpp  LinearModel-tests.cpp  SatelliteCatalog-tests.cpp  TLEParser-tests.cpp  Utility-tests.cpp  libsgpt4-tests.cpp
